@@ -1,0 +1,24 @@
+# Generated by Django 2.1.7 on 2019-04-30 00:51
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('courses', '0020_auto_20190430_0043'),
+        ('accounts', '0014_student_quizes'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='student',
+            name='homeworks',
+            field=models.ManyToManyField(blank=True, default=None, to='courses.Homework'),
+        ),
+        migrations.AddField(
+            model_name='student',
+            name='surveys',
+            field=models.ManyToManyField(blank=True, default=None, to='courses.Survey'),
+        ),
+    ]
