@@ -1,0 +1,24 @@
+# Generated by Django 2.1.7 on 2019-04-30 00:43
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('courses', '0019_auto_20190416_2229'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='quiz',
+            name='quiz_code',
+            field=models.CharField(blank=True, default=None, max_length=8),
+        ),
+        migrations.AddField(
+            model_name='quiz',
+            name='restricted',
+            field=models.BooleanField(default=False),
+            preserve_default=False,
+        ),
+    ]
