@@ -1,0 +1,18 @@
+# Generated by Django 2.1.7 on 2019-04-30 01:26
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('courses', '0020_auto_20190430_0043'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='assignment',
+            name='restrict_date',
+            field=models.DateTimeField(blank=True, default=None, null=True),
+        ),
+    ]
