@@ -38,8 +38,11 @@
 
         <tr>
             <td style="text-align: left;" colspan="2">
-                <a href={% url 'quiz_page' cid=quiz.course_id.id id=quiz.id %}> <input id="bgnQuizBtn" type="submit"
+                <form method="post">
+                < href={% url 'quiz_page' cid=quiz.course_id.id id=quiz.id %}> <input id="bgnQuizBtn" type="submit"
+
                                                                                        value="Begin Quiz"></a>
+                </form>
             <td></td>
             </td>
 
