@@ -39,7 +39,10 @@
 
         <tr>
             <td style="text-align: left;" colspan="2">
+                                <form method="post">
+
                 <a href="{% url 'survey_page' cid=survey.course_id.id id=survey.id %}"> <input id="bgnSurveyBtn" type="submit" value="Begin Survey"></a>
+                                </form>
             <td></td>
             </td>
         </tr>
